fix spacing:

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ button:hover {
   cursor: pointer;
 }
 #enter {
-  width: 750px;
+  width: 758px;
   background-color:#A7C8D4 ;
 }
 #enter:hover {
